lang2/macro/tests/ui/fail/12-const-constructor.stderr
error: `const fn` is not supported for ink! functions
  --> $DIR/12-const-constructor.rs:12:9
   |
12 |         const fn invalid_return(&mut self) {}
   |         ^^^^^
